# A-Share-Quant_TrY

./: .gitignore  README.md  pyproject.toml  run_a_share_internal_hot_news_runtime_control_panel_v1.bat  run_a_share_internal_hot_news_runtime_scheduler_v1.bat  v115b_run_log.txt  打开新闻中控-诊断版.cmd  打开新闻中控.bat
PROJECT_LIMITATION/: 01_PROJECT_CHARTER.md  02_RESEARCH_PROTOCOL.md  03_RESEARCH_ROADMAP.md  04_RESEARCH_DIRECTIONS.md  05_EXPERIMENT_STANDARD.md  06_PROTOCOL_EVOLUTION_POLICY.md  07_DECISION_LOG.md  08_RESEARCH_JOURNAL.md  09_DATA_CONTRACT.md  100_V13_CONCEPT_MAPPING_INVENTORY_V1.md  101_V13_CONCEPT_SEED_V1.md  102_V13_CONCEPT_SOURCE_FILL_V1.md  103_V13_CONCEPT_CONTEXT_AUDIT_V1.md  104_V13_PHASE_CHECK_V1.md  105_V13_CONCEPT_MAPPING_CONFIDENCE_V1.md  106_V13_CONCEPT_REGISTRY_V1.md  107_V13_CONCEPT_LINK_MODE_ASSIGNMENT_V1.md  108_V13_CONCEPT_REGISTRY_RECLASSIFICATION_V1.md  109_V13_CONCEPT_REGISTRY_USAGE_RULES_V1.md  10_METRICS_SPEC.md  110_V13_PHASE_CLOSURE_CHECK_V1.md  111_V15_LOCAL_REGIME_SEGMENTATION_CANDIDATE.md  112_V14_CONTEXT_CONSUMPTION_PILOT.md  113_V14_CONTEXT_CONSUMPTION_PROTOCOL_V1.md  114_V14_CONTEXT_FEATURE_SCHEMA_V1.md  115_V14_BOUNDED_DISCRIMINATION_CHECK_V1.md  116_V14_PHASE_CHECK_V1.md  117_V14_PHASE_CLOSURE_CHECK_V1.md  118_V15_RETAINED_FEATURE_CANDIDACY_REVIEW.md  119_V15_FEATURE_CANDIDACY_PROTOCOL_V1.md  11_PROMOTION_GATES.md  120_V15_FEATURE_ADMISSIBILITY_REVIEW_V1.md  121_V15_PHASE_CHECK_V1.md  122_V15_PHASE_CLOSURE_CHECK_V1.md  123_V16_PROVISIONAL_CANDIDACY_STABILITY_REVIEW.md  124_V16_STABILITY_REVIEW_PROTOCOL_V1.md  126_V16_PHASE_CHECK_V1.md  (+439 more)
(+8349 files in other folders)
